Fixed Navbar overlapping h2's

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
     margin-top: 3em;
     background-image: url("/images/cartographer.png"); 
     background-color:#4592af ;
-    
+    scroll-padding-top:50px;
 }
 
 
@@ -23,7 +23,6 @@ h1, h2, h3 {
     color: #000;
     font-family: 'Didact Gothic', sans-serif;
 }
-
 
 
 header,
@@ -62,11 +61,9 @@ nav{
     top: 0;
     left: 0;
     width: 100%;
-
     display: flex;
     flex-flow: row;
     justify-content: center;
-
     background: #333;
 }
 
@@ -106,6 +103,7 @@ section ul {
 #aboutMe {
     display: flex;
     flex-flow: wrap;
+
 }
 
 
